--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
 		"obsidian": "latest",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"tslib": "^2.5.3",
+		"typescript": "4.7.4",
+		"uuid": "^9.0.0"
 	}
 }
